<resources>
    <string name="net_error">你的网络似乎不太通畅，请检查你的网络连接</string>
    <string name="hint_model_success">切换模式成功，重启后生效！</string>
    <string name="app_name">CMenu</string>
    <string name="system_error">Sorry..软件故障，请重新启动！</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome_title">员工登录</string>
    <string name="user_name">&#160;员工编号:</string>
    <string name="input_user_name">请输入工号</string>
    <string name="user_password">密　　码:</string>
    <string name="input_user_password">请输入密码</string>
    <string name="issave">保存</string>
    <string name="cancle">取消</string>
    <string name="confirm">确定</string>
    <string name="setting">设置</string>
    <string name="server_address">服务器地址</string>
    <string name="server_address_demo">192.168.0.110:8081</string>
    <string name="additions">附加项</string>
    <string name="additions2">附加项:</string>
    <string name="search">搜索</string>
    <string name="all_dishes">共点菜品</string>
    <string name="zongji">总计：</string>
    <string name="hint">提示</string>
    <string name="hint_refresh">语言更新成功，重启后生效！</string>
    <string name="manNum">先生：</string>
    <string name="womanNum">女士：</string>
    <string name="isVip">是否会员？</string>
    <string name="start_tishi">提示：</string>
    <string name="thisTai">当前台位：</string>
    <string name="tagTai">目标台位：</string>
    <string name="tidan">提单</string>
    <string name="all">所有</string>
    <string name="pinming">品名</string>
    <string name="number">数量</string>
    <string name="price">价格</string>
    <string name="unit">单位</string>
    <string name="subtotal">小计</string>
    <string name="handle">操作</string>
    <string name="temporary_save">保存</string>
    <string name="all_addtions">全单附加项</string>
    <string name="all_billes">全单</string>
    <string name="print">打印</string>
    <string name="send">发送(即起)</string>
    <string name="back">返 回</string>
    <string name="yidian">已点菜品</string>
    <string name="bingtai">并台</string>
    <string name="change_tai">换台</string>
    <string name="search_vip">会员查询</string>
    <string name="retreat_food">退菜</string>
    <string name="urge_food">催菜</string>
    <string name="add_food">加菜</string>
    <string name="diancai_order">点菜排行</string>
    <string name="all_disheses">全部菜品</string>
    <string name="sell_dishes">沽清菜品</string>
    <string name="operator">操作员：</string>
    <string name="tableNumber">台位号：</string>
    <string name="peopleNum">人数：</string>
    <string name="greensNum">数量</string>
    <string name="greensName">名称</string>
    <string name="greensPrice">价格</string>
    <string name="SA_quXiaoPay">取消支付</string>
    <string name="SA_quXiaoPrivilege">取消优惠</string>
    <string name="SA_xianJin">现金</string>
    <string name="SA_yinHangKa">银行卡</string>
    <string name="SA_huiYuanKa">会员卡</string>
    <string name="SA_yuDaYin">打印</string>
    <string name="SA_back">返回</string>
    <string name="tangSJE">堂食金额：</string>
    <string name="heJJE">合计金额：</string>
    <string name="moLJE">抹零金额：</string>
    <string name="yingFJE">应付金额：</string>
    <string name="zhaoL">找零金额：</string>
    <string name="vip_taiweiText">台位号：</string>
    <string name="vip_orderText">账单号：</string>
    <string name="vip_renShuText">人数：</string>
    <string name="vip_yingFText">应付金额：</string>
    <string name="vip_VIPNumText">会员卡号：</string>
    <string name="vip_chuXuKText">储蓄余额：</string>
    <string name="vip_quanYEText">券余额：</string>
    <string name="vip_quanKeYYEText">券可用余额：</string>
    <string name="vip_jiFenYEText">积分余额：</string>
    <string name="vip_quanXinXText">可用电子券列表</string>
    <string name="vip_cancelBut">取消</string>
    <string name="vip_okBut">确认</string>
    <string name="vip_payBut">支付</string>
    <string name="Small_life">微生活</string>
    <string name="vip_ticketId">券ID</string>
    <string name="vip_ticketName">名称</string>
    <string name="vip_ticketMoney">金额</string>
    <string name="vip_ticketAmount">数量</string>
    <string name="vip_payment_chuZhiKYYEText">储值可用余额：</string>
    <string name="vip_payment_jiFenKYYEText">积分可用余额：</string>
    <string name="vip_payment_xianJinXFText">现金消费：</string>
    <string name="vip_payment_yeEXFText">余额消费：</string>
    <string name="vip_payment_jiFenXFText">积分消费：</string>
    <string name="vip_jiSuanYE">计算余额</string>
    <string name="vip_jiSuanJF">计算积分</string>
    <string name="vip_jiSuanXJ">计算现金</string>
    <string name="vip_cardXX">卡信息</string>
    <string name="vip_ConfirmPayment">确认支付</string>
    <string name="PopWin_phoneNumText">手机号码：</string>
    <string name="PopWin_vipNumText">会员卡号：</string>
    <string name="PopWin_phoneNumBut">查询</string>
    <string name="find_disName">菜品名</string>
    <string name="find_disNum">数量</string>
    <string name="find_disPri">价格</string>
    <string name="find_disUnit">单位</string>
    <string name="find_disAdd">附加项</string>
    <string name="find_disPayFS">结算方式</string>
    <string name="find_disPayYE">结算金额</string>
    <string name="yuding_table">预定台位</string>
    <string name="yuding_phone">手机号码</string>
    <string name="yuding_phone1">手机：</string>
    <string name="yuding_number">等位编码</string>
    <string name="yuding_tableNum">目标台位</string>
    <string name="yuding_sqNum">等位序号：</string>
    <string name="yuding_dis">预定菜品详情</string>
    <string name="yuding_Order_off">转正式台</string>
    <string name="yuding_cancel_table">取消等位</string>
    <string name="vip_card_disButton">点菜</string>
    <string name="one">1</string>
    <string name="tow">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="delete">删除</string>
    <string name="succeed">完成</string>
    <string name="login">登录</string>
    <string name="reset">重置</string>
    <string name="tc_not_dismiss">套餐还未点完，请点完或取消该套餐，再进行操作</string>
    <string name="tc_not_dismiss_other">套餐还未点完，请点完该套餐，再进行操作</string>
    <string name="eatable_fujia">附加项</string>
    <string name="eatable_yidiancai">已点菜</string>
    <string name="eatable_tc_queren">确认</string>
    <string name="eatable_tc_quxiao">取消</string>
    <string name="eatable_tc_tcnofinish">套餐还未选择完毕！</string>
    <string name="eatable_tc_servelnotxuan">你还没有选完套餐，有若干组还未选</string>
    <string name="eatable_tc_detail_fengefu"> ----------- </string>
    <string name="eatable_tc_detail_maohao"> : </string>
    <string name="eatable_tc_detail_zero"> 0 </string>
    <string name="eatable_tc_detail_line">—</string>
    <string name="save_success">保存成功</string>
    <string name="save_fail">保存失败</string>
    <string name="not_send_before_dian">你还没有点菜，不能发送!</string>
    <string name="dia_ftpsetting_instruction">请输入数据库文件所在的文件夹的ftp地址及账号密码</string>
    <string name="dia_ftpsetting_username">账号：</string>
    <string name="dia_ftpsetting_username_please">请输入账号</string>
    <string name="dia_ftpsetting_pwd">密码：</string>
    <string name="dia_ftpsetting_pwd_please">请输入密码</string>
    <string name="dia_ftpsetting_ip">IP：&#160;&#160; &#160;&#160;&#160;</string>
    <string name="dia_ftpsetting_ip_please">请输入IP地址</string>
    <string name="dia_encodesetting">请输入Pad编号</string>
    <string name="dia_encodesetting_bianhao">编号 :</string>
    <string name="dia_encodesetting_bianhao_hint">请输入设备编号</string>
    <string name="dia_certain">确认</string>
    <string name="dia_cancel">取消</string>
    <string name="dia_ipsetting_ipshow">当前地址：http://</string>
    <string name="dia_ipsetting_ipaddress">IP地址：</string>
    <string name="dia_ipsetting_ipaddress_hint">请输入IP地址</string>
    <string name="dia_ipsetting_ipport">端口号：</string>
    <string name="dia_ipsetting_ipport_hint">请输入端口号</string>
    <string name="dia_authsetting_instruction">请输入最小赠菜授权金额</string>
    <string name="dia_authsetting_jine">金额 ：</string>
    <string name="dia_shopencode_instruction">请输入店铺编号</string>
    <string name="dia_shopencode_bianhao">编号:</string>
    <string name="dia_shopencode_title">设置店铺编号</string>
    <string name="yixuan_gongdiancaipin">共点菜品:</string>
    <string name="yixuan_heji">合计:</string>
    <string name="yixuan_fujiaxiang">附加项:</string>
    <string name="yixuan_delall">全部删除</string>
    <string name="yixuan_quanxuan">全选</string>
    <string name="yixuan_pinming">品名</string>
    <string name="yixuan_shuliang">数量</string>
    <string name="yixuan_jiage">价格</string>
    <string name="yixuan_danwei">单位</string>
    <string name="yixuan_xiaoji">小计</string>
    <string name="yixuan_taiwei">台位</string>
    <string name="yixuan_cuicai">催菜</string>
    <string name="yixuan_huacai">划菜</string>
    <string name="yixuan_zhuandan">转单</string>
    <string name="yixuan_jiacai">加菜</string>
    <string name="yixuan_dayin">打印</string>
    <string name="yixuan_yujiesuan">预结算</string>
    <string name="yixuan_back">返回</string>
    <string name="verify_queren">确认</string>
    <string name="verify_quxiao">取消</string>
    <string name="yidiancai_taiwei">台位</string>
    <string name="yidiancai_beizhu">备注</string>
    <string name="yidiancai_fasong">发送</string>
    <string name="yidiancai_jiqifasong">即起发送</string>
    <string name="yidiancai_jiaoqifasong">叫起发送</string>
    <string name="yidiancai_waitOrPrompt">即起/叫起</string>
    <string name="yidiancai_gongdiancaipin">共点菜品:</string>
    <string name="yidiancai_heji">合计:</string>
    <string name="yidiancai_fujiaxiang">附加项:</string>
    <string name="findVipPhone">手机号或卡号：</string>
    <string name="fujia_fujiaxiangshezhi">附加项设置</string>
    <string name="fujia_zhengdanbeizhu">整单备注</string>
    <string name="fujia_queding">确定</string>
    <string name="fujia_quxiao">取消</string>
    <string name="second_unit_weight">请输入第二单位重量</string>
    <string name="data_error">获取数据失败</string>
    <string name="input_not_null">输入框不能为空</string>
    <string name="bill_Paid_not_cancle">账单已消费，请支付完成或取消支付</string>
    <string name="please_input_money">请输入金额</string>
    <string name="input_money">输入金额</string>
    <string name="money_not_null">金额不能为空</string>
    <string name="pay_money_not_privilege">使用银行卡或现金后将不能使用优惠，是否继续？</string>
    <string name="pay_money_not_privilege1">使用现金后不可以使用优惠，请在使用现金之前使用优惠。</string>
    <string name="success">操作成功</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="whether_to_vip">是否更改会员号？</string>
    <string name="phone_num">手机号：</string>
    <string name="vip_num">会员号：</string>
    <string name="num_error">输入的号码错误</string>
    <string name="reserve_table_and_order_dishes">是否预定台位并点菜</string>
    <string name="query_vip_hint_one">请录入正确的手机号码或会员卡号后，点击确定按钮并等待通讯结束</string>
    <string name="query_vip_hint_two">如当前手机卡号下有多张会员卡，请选择要使用的卡号，然后点击查询继续</string>
    <string name="skip_error">界面跳转异常</string>
    <string name="ftp_adds_not_null">FTP 地址为空</string>
    <string name="ftp_adds_error">FTP 地址错误</string>
    <string name="update_success">数据更新成功</string>
    <string name="update_unsuccess">数据更新失败</string>
    <string name="exit_app">再按一次退出程序</string>
    <string name="update_data">数据更新中...</string>
    <string name="if_update_data">数据版本已更新，是否FTP同步数据</string>
    <string name="please_user_name">请输入用户名</string>
    <string name="ip_not_null">IP地址为空，请设置IP后登陆！</string>
    <string name="pwd_error">密码错误</string>
    <string name="pwd_ver">密码验证</string>
    <string name="store_num_setting_success">店铺编号设置成功</string>
    <string name="current_num">当前编号：</string>
    <string name="area">区域</string>
    <string name="state">状态</string>
    <string name="lc">楼层</string>
    <string name="state_start">开台</string>
    <string name="state_number">台号：</string>
    <string name="numerical_order">序号：</string>
    <string name="table">台位：</string>
    <string name="repast_man">就餐先生人数</string>
    <string name="repast_woman">就餐女士人数</string>
    <string name="start_number">开台号数</string>
</resources>